🚀 Initial full deploy: HyperOS dApp dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ yarn-error.log*
 "src/ipfs-cache" 
 "dist/" 
 ".DS_Store" 
+"node_modules/" 
+".env" 
+"src/abi*.json" 
+"src/ipfs-cache" 
+"dist/" 
+".DS_Store" 
