--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,27 @@
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Node.js
+node_modules/
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+dist/
+build/
+.next/
+.cache/
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Vercel/Netlify
-.vercel
-.netlify
+# OS
+.DS_Store
+Thumbs.db
 
-# IDEs
-.vscode
-.idea
-"node_modules/" 
-".env" 
-"src/abi*.json" 
-"src/ipfs-cache" 
-"dist/" 
-".DS_Store" 
-"node_modules/" 
-".env" 
-"src/abi*.json" 
-"src/ipfs-cache" 
-"dist/" 
-".DS_Store" 
+# Editor
+.vscode/
+.idea/
+
+# Test coverage
+coverage/
+
+# Contracts / JSON artifacts
+src/abi*.json
+src/ipfs-cache
