--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:bridge": "node src/BridgeBTCWatcher.js"
+    "start:bridge": "node src/BridgeBTCWatcher.jsx"
   },
   "eslintConfig": {
     "extends": [
