--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
-{
+{ 
   "name": "hypercoindashboard-ui",
   "version": "0.1.0",
   "private": true,
+  "description": "HyperCoin Dashboard UI with Git+Lint+Build Preview + CLI Automation",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start:bridge": "node src/BridgeBTCWatcher.jsx",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "preview": "npm run lint && npm run build && serve -s build",
+    "snapshot": "powershell -ExecutionPolicy Bypass -File git-snapshot.ps1"
+  },
   "dependencies": {
     "@metamask/detect-provider": "^2.0.0",
     "axios": "^1.4.0",
@@ -11,12 +22,22 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start:bridge": "node src/BridgeBTCWatcher.jsx"
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "pkg": "^5.8.0",
+    "serve": "^14.2.0"
+  },
+  "bin": {
+    "hyperpreview": "./launch.js"
+  },
+  "pkg": {
+    "scripts": [
+      "git-snapshot.ps1"
+    ],
+    "targets": [
+      "node18-win-x64"
+    ],
+    "outputPath": "dist"
   },
   "eslintConfig": {
     "extends": [
